--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --build --clean"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "typescript": "^4.7.4"
   }
 }
