--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
         "noEmitOnError": true,
         "removeComments": false,
         "sourceMap": true,
-        "target": "es5",
-        "outDir": "dist"
+        "target": "es6",
+        "outDir": "dist",
+        "moduleResolution": "node",
+        "module": "ESNext"
     },
     "include": [
         "src/**/*"
