--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.0.0",
+    "@types/typescript": "^2.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "typescript": "^4.7.4"
