--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "noEmitOnError": true,
         "removeComments": false,
         "sourceMap": true,
-        "target": "es6",
+        "target": "ES2022",
         "outDir": "dist",
         "moduleResolution": "node",
         "module": "ESNext"
