--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^18.0.0",
     "@types/typescript": "^2.0.0",
     "axios": "^0.27.2",
+    "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "typescript": "^4.7.4"
   }
