--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,33 @@
 {
     "compilerOptions": {
-        "noImplicitAny": false,
-        "noEmitOnError": true,
-        "removeComments": false,
-        "sourceMap": true,
-        "target": "ES2022",
-        "outDir": "dist",
+        "target": "ESNext",
+        "module": "CommonJS",
+        "rootDir": "./src/",
+        "outDir": "./dist/",
+        "strict": true,
         "moduleResolution": "node",
-        "module": "node16"
+        "importHelpers": true,
+        "experimentalDecorators": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true,
+        "forceConsistentCasingInFileNames": true,
+        "removeComments": true,
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "sourceMap": false,
+        "baseUrl": "./"
     },
+    "files": [
+        "src/Bot.ts"
+    ],
     "include": [
-        "src/**/*"
+        "./**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
     ]
 }
