--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --build"
+    "build": "tsc --build && npx minify ./dist -d out --mangle --simplify --mergeVars && rmdir /S /Q .\\dist && docker build -t anoungbob . && rmdir /S /Q .\\out && docker image prune -f",
+    "start": "docker run -it --rm --name test-bot anoungbob",
+    "test": "npm run build && pause && npm start"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "discord.js": "^13.8.0",
+    "dotenv": "^16.0.1"
+  },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/typescript": "^2.0.0",
-    "axios": "^0.27.2",
-    "discord.js": "^13.8.0",
-    "dotenv": "^16.0.1",
+    "babel-minify": "^0.2.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
