--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc --build && npx minify ./dist -d out --mangle --simplify --mergeVars && rmdir /S /Q .\\dist && docker build -t anoungbob . && rmdir /S /Q .\\out && docker image prune -f",
     "start": "docker run -it --rm --name test-bot anoungbob",
-    "test": "npm run build && pause && npm start"
+    "test": "npm run build && pause && npm start",
+    "files": "tsc --build && npx minify ./dist -d out --mangle --simplify --mergeVars"
   },
   "author": "",
   "license": "ISC",
