--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "build": "tsc --build && minify ./dist -d out --mangle --simplify --mergeVars && rmdir /S /Q .\\dist && docker build -t anoungbob . && rmdir /S /Q .\\out && docker image prune -f",
     "start": "docker run -it --rm --name test-bot anoungbob",
     "test": "npm run build && pause && npm start",
-    "files": "tsc --build && minify -d out --mangle --simplify --mergeVars ./dist/"
+    "files": "tsc --build && grunt"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "discord.js": "^13.8.0",
+    "discord.js": "^13.8.1",
     "dotenv": "^16.0.1"
   },
   "devDependencies": {
+    "@types/grunt": "^0.4.27",
     "@types/node": "^18.0.0",
-    "babel-minify": "^0.2.0",
+    "grunt": "^1.5.3",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-uglify": "^5.2.2",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
